# Colab-VsCode-Bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: useDetails.md
notebooks/: dev_notebook.ipynb
src/colab_vscode_bridge/: download.py
src/kaggle_colab_bridge/: __init__.py  auth.py  colab_upload.py  kaggle_upload.py
