[project]
name = "colab-vscode-bridge"
version = "0.1.1"
description = "A utility package that fills functionality gaps in the Colab extension for VS Code. It provides helper functions for tasks not natively supported, including simplified Kaggle authentication, direct file uploads from Colab to Kaggle, and downloading small files from a Colab runtime to the local VS Code environment."
authors = [
    { name = "ranidzkellou", email = "kellour77@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.0.0",
    "ipython>=8.0.0",
    "kaggle>=1.5.0",
]
keywords = [
    "colab",
    "kaggle",
    "jupyter",
    "upload",
    "download",
]
license = "MIT"
[tool.poetry]
packages = [
    { include = "colab_vscode_bridge", from = "src" },
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]
